--- a/RPGVXAcecn/rgss/g_modules.html
+++ b/RPGVXAcecn/rgss/g_modules.html
@@ -1,14 +1,14 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
 <HTML lang=en><HEAD><TITLE>RGSS Built-in Modules</TITLE>
 <META content="text/html; charset=ISO-8859-1" http-equiv=Content-Type>
-<META content=text/css http-equiv=Content-Style-Type><LINK rel=stylesheet 
+<META content=text/css http-equiv=Content-Style-Type><LINK rel=stylesheet
 type=text/css href="../style.css">
 <META name=GENERATOR content="MSHTML 8.00.7601.17785"></HEAD>
 <BODY>
 <H1>RGSS&nbsp;&#20869;&#24314;&#27169;&#22359;</H1>
 <UL>
-  <LI><A href="gm_audio.html">Audio</A> 
-  <LI><A href="gm_graphics.html">Graphics</A> 
-  <LI><A href="gm_input.html">Input</A> 
-  <LI><A href="gm_rpg.html">RPG RPG&#27169;&#22359;</A> </LI></UL>
+  <LI><A href="gm_audio.html">Audio</A>
+  <LI><A href="gm_graphics.html">Graphics</A>
+  <LI><A href="gm_input.html">Input</A>
+  <LI><A href="gm_rpg.html">RPG</A> </LI></UL>
 <H6></H6></BODY></HTML>
