--- a/RPGVXAcecn/rgss/appendix02.html
+++ b/RPGVXAcecn/rgss/appendix02.html
@@ -202,8 +202,7 @@ p sprintf("%g", 10 ** -5) # =&gt; "1e-005"
 <DL>
   <DT>nth$ 
   <DD>
-  <P><FONT face=Verdana>指定第 <SPAN 
-  style="FONT-STYLE: italic">nth</SPAN> 个执行的参数。</FONT></P><PRE>p sprintf("%1$d, %1$x, %1$o", 10)
+  <P><FONT face=Verdana>指定第 nth 个执行的参数。</FONT></P><PRE>p sprintf("%1$d, %1$x, %1$o", 10)
 =&gt; "10, a, 12"
 
 p sprintf("%3$d, %2$x, %1$o", 1, 2, 3)
