--- a/RPGVXAcecn/rgss/sc_array.html
+++ b/RPGVXAcecn/rgss/sc_array.html
@@ -16,18 +16,18 @@ href="syntax03.html#L000279">Array 表达式</A>&nbsp;。</P>
   <LI><A href="sm_enumerable.html">Enumerable</A> </LI></UL>
 <H2>类方法</H2>
 <DL>
-  <DT>Array[item,...] 
-  <DD>
-  <P>根据填入的参数直接创建一个数组。</P>
-  <DT><A id=Array.2enew name=Array.2enew></A>Array.new([<VAR>size</VAR>[, <VAR>val</VAR>]]) 
-  <DT><A id=Array.2enew_2 name=Array.2enew_2></A>Array.new(<VAR>ary</VAR>) 
-  <DT><A id=Array.2enew_3 name=Array.2enew_3></A>Array.new(<VAR>size</VAR>) {|<VAR>index</VAR>| ... } 
-  <DD>
-  <P>创建一个数组。当它的 size 也就是长度被指定时，相应长度的数组会被创建出来，只不过所有的元素都是
-  nil。如果第二个参数 val 也被指定了的话，那么参数中的数据会取代掉数组中的&nbsp;nil 元素。 (请注意，并不是每个元素都把 val 复制了一遍。所有元素都是对同一个对象 val 的引用。
-  <A href="trap_Array.html">trap::Array</A>)</P>
-  <P>第二种格式就是直接通过参数指定数组中的所有成员，自动指定数组长度：</P><PRE>p Array.new([1,2,3]) # =&gt; [1,2,3]</PRE>
-  <P>第三种格式是设定一个存储着区块运算结果的值。区块在每一个元素中执行，所以它可能让所有元素都成为一个特定的对象：</P><PRE>p Array.new(5) {|i| i }         # =&gt; [0, 1, 2, 3, 4]
+<DT>Array[item,...]
+<DD>
+<P>根据填入的参数直接创建一个数组。</P>
+<dt><a name="Array.2enew" id="Array.2enew"></a>Array.new([<var>size</var>[, <var>val</var>]])</dt>
+<dt><a name="Array.2enew_2" id="Array.2enew_2"></a>Array.new(<var>ary</var>)</dt>
+<dt><a name="Array.2enew_3" id="Array.2enew_3"></a>Array.new(<var>size</var>) {|<var>index</var>| ... }</dt>
+<DD>
+<P>创建一个数组。当它的 <var>size</var> 也就是长度被指定时，相应长度的数组会被创建出来，只不过所有的元素都是
+  nil。如果第二个参数 <var>val</var> 也被指定了的话，那么参数中的数据会取代掉数组中的&nbsp;nil 元素。 (请注意，并不是每个元素都把 <var>val</var> 复制了一遍。所有元素都是对同一个对象 <var>val</var> 的引用。
+<A href="trap_Array.html">trap::Array</A>)</P>
+<P>第二种格式生成参数的一个副本：</P><PRE>p Array.new([1,2,3]) # =&gt; [1,2,3]</PRE>
+<P>第三种格式是以区块的运算结果作为元素的值。区块对每一个元素分别执行，因此可以让所有元素都是某一对象的副本。</P><PRE>p Array.new(5) {|i| i }         # =&gt; [0, 1, 2, 3, 4]
 
 ary = Array.new(3, "foo")
 ary.each {|obj| p obj.object_id }
@@ -42,29 +42,23 @@ ary.each {|obj| p obj.object_id }
      537770424</PRE></DD></DL>
 <H2>方法</H2>
 <DL>
-  <DT>self[nth] 
+  <DT>self[nth]
   <DD>
   <P>获取第 <VAR>nth</VAR> 个数组元素。索引从 0 开始。若 <VAR>nth</VAR>
   为负值，则从尾部开始算起（最后一个元素的索引为 -1）。若第 <VAR>nth</VAR> 个元素不存在，则返回 nil。</P>
-  <DT>self[start, <VAR>length</VAR>] 
+  <DT>self[start, <VAR>length</VAR>]
   <DD>
-  <P>返回从 <SPAN style="FONT-STYLE: italic">start</SPAN> 算起，包含
-  <SPAN style="FONT-STYLE: italic">length</SPAN> 个元素的数组。若 <SPAN
-  style="FONT-STYLE: italic">start</SPAN> 为负值，则从尾部开始算起（最后一个元素的索引为 -1）。若 <SPAN
-  style="FONT-STYLE: italic">length</SPAN> 超出从 <SPAN
-  style="FONT-STYLE: italic">start</SPAN> 算起的数组剩余长度，则忽略超出的部分。若 <SPAN
-  style="FONT-STYLE: italic">length</SPAN> 为负值则返回 nil。 </P>
-  <DT>self[nth]=val 
+  <P>返回从 start 算起，包含
+  length 个元素的数组。若 start 为负值，则从尾部开始算起（最后一个元素的索引为 -1）。若 length 超出从 start 算起的数组剩余长度，则忽略超出的部分。若 length 为负值则返回 nil。 </P>
+  <DT>self[nth]=val
   <DD>
   <P>将数组的第 <VAR>nth</VAR> 个元素之值改为 <VAR>val</VAR>。若
   <VAR>nth</VAR> 超出数组范围，则数组会自动延伸。所延伸的部分初始化为 nil。</P>
   <P>返回&nbsp;<VAR>val。</VAR></P>
-  <DT>self[start, <VAR>length</VAR>]=<VAR>val</VAR> 
+  <DT>self[start, <VAR>length</VAR>]=<VAR>val</VAR>
   <DD>
-  <P>将数组中从 <SPAN style="FONT-STYLE: italic">start</SPAN> 开始算起
-  <SPAN style="FONT-STYLE: italic">length</SPAN> 个元素的内容替换成 <SPAN
-  style="FONT-STYLE: italic">val</SPAN> 。若 <SPAN
-  style="FONT-STYLE: italic">val</SPAN> 非数组，则调用 val.to_ary 或使用 [val]
+  <P>将数组中从 start 开始算起
+  length 个元素的内容替换成 val 。若 val 非数组，则调用 val.to_ary 或使用 [val]
   来进行替换。</P>
   <DD>
   <P>返回 <VAR>val</VAR> 。</P><PRE>ary = [0, 1, 2, 3]
@@ -74,77 +68,67 @@ ary[2, 1] = 99
 p ary                        # =&gt; [0, "a", 99, "c", 3]
 ary[1, 0] = ["inserted"]
 p ary                        # =&gt; [0, "inserted", "a", 99, "c", 3]</PRE>
-  <DT><VAR>self</VAR> + <VAR>other</VAR> 
+  <DT><VAR>self</VAR> + <VAR>other</VAR>
   <DD>
-  <P>将 <SPAN style="FONT-STYLE: italic">self </SPAN>和 <SPAN
-  style="FONT-STYLE: italic">other</SPAN> 的内容连结起来并返回一个新的数组。若 <VAR>other</VAR>
+  <P>将 self 和 other 的内容连结起来并返回一个新的数组。若 <VAR>other</VAR>
   不是数组，则使用 other.to_ary 的返回值。若返回值不是数组，抛出 <A
   href="s_exceptions.html#TypeError">TypeError型错误）</A> 。</P><PRE>a = [1, 2]
 b = [8, 9]
 p a + b     # =&gt; [1, 2, 8, 9]
 p a         # =&gt; [1, 2]        (不变)
 p b         # =&gt; [8, 9]        (同样不变)</PRE>
-  <DT><VAR>self</VAR> * <VAR>times</VAR> 
+  <DT><VAR>self</VAR> * <VAR>times</VAR>
   <DD>
   <P>创建并返回一个新的数组，其成员为原数组成员循环 times 遍的结果。</P><PRE>p [1, 2, 3] * 3  #=&gt; [1, 2, 3, 1, 2, 3, 1, 2, 3]</PRE>
-  <DT><VAR>self</VAR> - <VAR>other</VAR> 
+  <DT><VAR>self</VAR> - <VAR>other</VAR>
   <DD>
-  <P>减集操作。返回一个包含所有 <SPAN style="FONT-STYLE: italic">self</SPAN>
-  元素、但是减去所有 <SPAN style="FONT-STYLE: italic">other</SPAN> 元素的新数组。</P>
-  <DT><VAR>self</VAR> &amp; <VAR>other</VAR> 
+  <P>减集操作。返回一个包含所有 self
+  元素、但是减去所有 other 元素的新数组。</P>
+  <DT><VAR>self</VAR> &amp; <VAR>other</VAR>
   <DD>
-  <P>交集操作。返回一个包含在 <SPAN style="FONT-STYLE: italic">self</SPAN> 和
-  <SPAN style="FONT-STYLE: italic">other</SPAN> 共有元素的数组。移除重复的元素。</P>
-  <DT><VAR>self</VAR> | <VAR>other</VAR> 
+  <P>交集操作。返回一个包含在 self 和
+  other 共有元素的数组。移除重复的元素。</P>
+  <DT><VAR>self</VAR> | <VAR>other</VAR>
   <DD>
-  <P>并集操作。返回一个包含在 <SPAN style="FONT-STYLE: italic">self</SPAN> 和
-  <SPAN style="FONT-STYLE: italic">other</SPAN> 所有元素的数组。移除重复的元素。</P>
-  <DT><VAR>self</VAR> &lt;=&gt; <VAR>other</VAR> 
+  <P>并集操作。返回一个包含在 self 和
+  other 所有元素的数组。移除重复的元素。</P>
+  <DT><VAR>self</VAR> &lt;=&gt; <VAR>other</VAR>
   <DD>
-  <P>使用 &lt;=&gt;依次比较 <SPAN
-  style="FONT-STYLE: italic">self</SPAN> 和 <SPAN
-  style="FONT-STYLE: italic">other</SPAN> 的元素，若 <SPAN
-  style="FONT-STYLE: italic">self</SPAN> 大于 <SPAN
-  style="FONT-STYLE: italic">other</SPAN>，则返回 1、若 <SPAN
-  style="FONT-STYLE: italic">self</SPAN> 等于 <SPAN
-  style="FONT-STYLE: italic">other</SPAN>，则返回 0、若 <SPAN
-  style="FONT-STYLE: italic">self</SPAN> 小于 <SPAN
-  style="FONT-STYLE: italic">other</SPAN>，则返回
+  <P>使用 &lt;=&gt;依次比较 self 和 other 的元素，若 self 大于 other，则返回 1、若 self 等于 other，则返回 0、若 self 小于 other，则返回
   -1。若是各元素均相等，且其中一个数组已到达尾部时，较短的数组判定为小。</P>
-  <DT><VAR>self</VAR> == <VAR>other</VAR> 
+  <DT><VAR>self</VAR> == <VAR>other</VAR>
   <DD>
   <P>使用 == 依次比较各个元素，若所有元素都相等则返回 true。</P>
-  <DT>clear 
+  <DT>clear
   <DD>
   <P>将数组清空，删除所有元素。返回 self。</P><PRE>ary = [1, 2]
 ary.clear
 p ary     # =&gt; []</PRE>
-  <DT>clone 
-  <DT>dup 
+  <DT>clone
+  <DT>dup
   <DD>
   <P>返回一个与调用者有同样内容的数组。clone&nbsp;完完全全复制一个数组、包括冻结状态、特殊方法等，而 dup
   只有复制对象内容而已。clone 和 dup 都不会复制方法或元素本身。</P>
-  <DT>compact 
-  <DT>compact! 
+  <DT>compact
+  <DT>compact!
   <DD>
   <P>返回一个除了 nil 元素以外，包含所有 self 元素的数组。compact!
-  则是执行破坏性更新，若成功修改，就返回 <SPAN style="FONT-STYLE: italic">self</SPAN>，否则返回
+  则是执行破坏性更新，若成功修改，就返回 self，否则返回
   nil。</P><PRE>ary = [1, nil, 2, nil, 3, nil]
 p ary.compact   # =&gt; [1, 2, 3]
 p ary           # =&gt; [1, nil, 2, nil, 3, nil]
 ary.compact!
 p ary           # =&gt; [1, 2, 3]
 p ary.compact!  # =&gt; nil</PRE>
-  <DT>concat(<VAR>other</VAR>) 
+  <DT>concat(<VAR>other</VAR>)
   <DD>
-  <P>将 <SPAN style="FONT-STYLE: italic">other</SPAN> 连结到 <SPAN
-  style="FONT-STYLE: italic">self</SPAN>（破坏性操作）。返回 <VAR>self</VAR>。</P><PRE>array = [1, 2]
+  <P>将 other 连结到 self（破坏性操作）。返回 <VAR>self</VAR>。</P><PRE>array = [1, 2]
 a     = [3, 4]
 array.concat a
 p array          # =&gt; [1, 2, 3, 4]
 p a              # =&gt; [3, 4]       # 没有变化</PRE>
-  <DT>delete(<VAR>val</VAR>) 
-  <DT>delete(<VAR>val</VAR>) { ... } 
+  <DT>delete(<VAR>val</VAR>)
+  <DT>delete(<VAR>val</VAR>) { ... }
   <DD>
   <P>删除所有等于 <VAR>val</VAR> （借由 ==）的元素。若有任何元素与 <VAR>val</VAR>
   相等，返回 <VAR>val</VAR>。</P>
@@ -157,41 +141,40 @@ p array                 # =&gt; [1, 3, 1]
 p ary.delete(nil)       # =&gt; nil
 p ary                   # =&gt; []
 p ary.delete(nil)       # =&gt; nil</PRE>
-  <DT>delete_at(<VAR>pos</VAR>) 
+  <DT>delete_at(<VAR>pos</VAR>)
   <DD>
-  <P>删除在 <SPAN style="FONT-STYLE: italic">pos</SPAN>
+  <P>删除在 pos
   位置的元素，并返回被删除的元素。若 <VAR>pos</VAR> 超出数组范围则返回 nil。</P><PRE>array = [0, 1, 2, 3, 4]
 array.delete_at 2
 p array             # =&gt; [0, 1, 3, 4]</PRE>
-  <DT>delete_if {|<VAR>x</VAR>| ... } 
-  <DT>reject! {|<VAR>x</VAR>| ... } 
+  <DT>delete_if {|<VAR>x</VAR>| ... }
+  <DT>reject! {|<VAR>x</VAR>| ... }
   <DD>
   <P>依次使用各个元素对区块进行计算，并删除所有运算结果为真的元素。</P>
   <P>delete_if&nbsp;会返回 self ，而 reject!&nbsp;会返回 self
   （如果有元素被删除）或者 nil （如果没有元素被删除）。</P>
-  <DT>each {|<VAR>item</VAR>| .... } 
+  <DT>each {|<VAR>item</VAR>| .... }
   <DD>
   <P>依次使用各个元素来对区块进行计算。返回 <VAR>self</VAR>。</P><PRE># 1, 2, 3 are displayed in order
 [1, 2, 3].each do |i|
   puts i
 end</PRE>
-  <DT>each_index {|<VAR>index</VAR>| .... } 
+  <DT>each_index {|<VAR>index</VAR>| .... }
   <DD>
   <P>依每个元素的索引，对区块进行计算。与下面的语句相同：</P><PRE>(0 ... ary.size).each {|index| ....  }</PRE>
   <P>返回&nbsp;self。</P>
-  <DT>empty? 
+  <DT>empty?
   <DD>
   <P>若元素数为 0，返回 true。</P>
-  <DT>include?(<VAR>val</VAR>) 
+  <DT>include?(<VAR>val</VAR>)
   <DD>
-  <P>若数组中任一元素等于 <SPAN
-  style="FONT-STYLE: italic">val</SPAN>（使用==），返回 true。</P>
-  <DT>index(<VAR>val</VAR>) 
+  <P>若数组中任一元素等于 val（使用==），返回 true。</P>
+  <DT>index(<VAR>val</VAR>)
   <DD>
   <P>返回数组第一个等于 <VAR>val</VAR>（使用 ==）的元素的索引。若找不到相等的元素则返回
   nil。</P>
   <DT>insert(<VAR>nth</VAR>, [<VAR>val</VAR>[, <VAR>val2</VAR>
-  ...]]) 
+  ...]])
   <DD>
   <P>在第 nth 个元素前面插入第二个参数以及后面的所有参数。返回
   <VAR>self</VAR>。定义如下：</P><PRE>class Array
@@ -204,14 +187,14 @@ end
 ary.insert 2, 'a', 'b'
 p ary                  # =&gt; ["foo", "bar", "a", "b", "baz"]</PRE>
   <P>若没有指定 <VAR>val</VAR> 的参数，则什么都不做。</P>
-  <DT>length 
-  <DT>size 
+  <DT>length
+  <DT>size
   <DD>
   <P>返回数组的长度。若数组为空，返回 0。</P>
-  <DT>nitems 
+  <DT>nitems
   <DD>
   <P>返回非 nil 的元素数目。</P>
-  <DT>pop 
+  <DT>pop
   <DD>
   <P>删除并返回最后一个元素。若数组为空，返回 nil。</P><PRE>array = [1, [2, 3], 4]
 p array.pop      # =&gt; 4
@@ -221,7 +204,7 @@ p array          # =&gt; [1]
 p array.pop      # =&gt; 1
 p array.pop      # =&gt; nil
 p array          # =&gt; []</PRE>
-  <DT>push(<VAR>obj1</VAR>[, <VAR>obj2</VAR> ...]) 
+  <DT>push(<VAR>obj1</VAR>[, <VAR>obj2</VAR> ...])
   <DD>
   <P>依次将 <VAR>obj1</VAR>, <VAR>obj2</VAR> ...
 插入数组的尾部。</P>
@@ -230,30 +213,30 @@ array.push 4
 array.push [5, 6]
 array.push 7, 8
 p array          # =&gt; [1, 2, 3, 4, [5, 6], 7, 8]</PRE>
-  <DT>reverse 
-  <DT>reverse! 
+  <DT>reverse
+  <DT>reverse!
   <DD>
   <P>reverse 返回一个与原数组元素顺序相反的辛数组。reverse! 则是执行破坏性更新。</P>
   <P>reverse 总是返回一个新的数组，而 reverse! 返回
 <VAR>self</VAR>。</P>
-  <DT>shift 
+  <DT>shift
   <DD>
   <P>删除并返回第一个元素。剩余的元素会自动向前补足空缺。若数组为空，则返回 nil。</P>
-  <DT>sort 
-  <DT>sort! 
-  <DT>sort {|<VAR>a</VAR>, <VAR>b</VAR>| ... } 
-  <DT>sort! {|<VAR>a</VAR>, <VAR>b</VAR>| ... } 
+  <DT>sort
+  <DT>sort!
+  <DT>sort {|<VAR>a</VAR>, <VAR>b</VAR>| ... }
+  <DT>sort! {|<VAR>a</VAR>, <VAR>b</VAR>| ... }
   <DD>
   <P>将数组内容排序。若是带区块调用，则传递两个参数给区块，用区块计算的结果进行排序。不带区块时，使用 &lt;=&gt;
   对元素进行比较。sort! 则是对数组元素进行破坏型更新。</P>
   <DD>
   <P>sort 返回一个进行过排序的新数组，而 sort! 必定返回 <VAR>self</VAR>。</P>
-  <DT>uniq 
-  <DT>uniq! 
+  <DT>uniq
+  <DT>uniq!
   <DD>
   <P>uniq 返回一个移除重复元素的新数组。剩余的元素会自动向前补足空缺。uniq! 进行破坏性删除，成功执行删除时返回
   self ，否则返回 nil。</P>
-  <DT>unshift(<VAR>obj1</VAR>[, <VAR>obj2</VAR> ...]) 
+  <DT>unshift(<VAR>obj1</VAR>[, <VAR>obj2</VAR> ...])
   <DD>
   <P>将 <VAR>obj1</VAR>、<VAR>obj2</VAR> ...
 依次插入在数组的头部。</P>
