--- a/RPGVXAcecn/rgss/sc_file.html
+++ b/RPGVXAcecn/rgss/sc_file.html
@@ -75,7 +75,7 @@ p File.extname(".foo")            # =&gt; ""
   <DD>
   <P>开启由 <VAR>path</VAR> 指定的文件，并返回文件对象。若开启文件失败，则抛出 <A
   href="s_exceptions.html#Errno">Errno::EXXX</A> 异常。</P>
-  <P>参数 <SPAN style="FONT-STYLE: italic">mode</SPAN> 的用法与内建函数
+  <P>参数 mode 的用法与内建函数
   <A href="rgss/s_functions.html#L000379">open</A> 相同。</P>
   <P>open 函数可以带区块，此时以指定的文件对象运行区块。区块云行结束则自动关闭文件。</P>
   <P>带区块时，返回值为区块的计算结果。 </P>
