--- a/RPGVXAcecn/rgss/sc_hash.html
+++ b/RPGVXAcecn/rgss/sc_hash.html
@@ -64,9 +64,9 @@ type=text/css href="../style.css">
   作为其元素值之一，若含有&nbsp;<VAR>value </VAR>则返回 true。</P>
   <DT>index(<VAR>val</VAR>) 
   <DD>
-  <P>返回与 <SPAN style="FONT-STYLE: italic">val</SPAN> 
+  <P>返回与 val 
   对应的主键。若无法对应则返回 nil。</P>
-  <P>若有许多与 <SPAN style="FONT-STYLE: italic">val</SPAN> 
+  <P>若有许多与 val 
   对应的主键，则随机返回一个。</P>
   <DT>keys 
   <DD>
