--- a/RPGVXAcecn/rgss/sc_integer.html
+++ b/RPGVXAcecn/rgss/sc_integer.html
@@ -16,7 +16,7 @@ href="sc_fixnum.html">Fixnum</A> 和
 <DL>
   <DT>self[nth] 
   <DD>
-  <P>若是整数的第 <SPAN style="FONT-STYLE: italic">nth</SPAN> 位（LSB &#9472;
+  <P>若是整数的第 nth 位（LSB &#9472;
   最低意义位 &#9472; 是第 0 位）是 1 就返回 1，否则返回 0。</P>
   <P>self[nth]=bit 则不是 Integer 方法，因为与相关的 Numeric 类不变。</P>
   <DT><VAR>self</VAR> + <VAR>other</VAR> 
