--- a/RPGVXAcecn/rgss/sc_io.html
+++ b/RPGVXAcecn/rgss/sc_io.html
@@ -55,8 +55,8 @@ type=text/css href="../style.css">
   <DD>
   <P>读取所有数据，并返回一个由 一行 内容组成的数组。若是 IO 已经到达文件末段，则返回空数组 
   []。</P>
-  <P>「行」是由参数 <SPAN style="FONT-STYLE: italic">rs</SPAN> 
-  所指定的字符串做断句，<SPAN style="FONT-STYLE: italic">rs</SPAN> 的默认值为 "\n"。</P>
+  <P>「行」是由参数 rs 
+  所指定的字符串做断句，rs 的默认值为 "\n"。</P>
   <P>若指定 nil 为 <VAR>rs</VAR> 参数，则不会进行分行。若指定空字符串 "" 
   ，则会把连续的分行符当作断句（段落模式）。</P>
   <DT>write(<VAR>str</VAR>) 
