--- a/RPGVXAcecn/rgss/sc_object.html
+++ b/RPGVXAcecn/rgss/sc_object.html
@@ -52,7 +52,7 @@ type=text/css href="../style.css">
   <P>将对象以人类可读的字符串形式返回。</P>
   <DT>instance_of?(<VAR>klass</VAR>) 
   <DD>
-  <P>若 <VAR>self</VAR> 是 <SPAN style="FONT-STYLE: italic">klass</SPAN> 
+  <P>若 <VAR>self</VAR> 是 klass 
   类的直属实例，则返回 true。当 obj.instance_of?(c) 成立时，obj.kind_of?(c) 也一定会成立。</P>
   <DT><A name=instance_variable_get>instance_variable_get(<VAR>var</VAR>)</A> 
   <DD>
