--- a/RPGVXAcecn/rgss/sc_time.html
+++ b/RPGVXAcecn/rgss/sc_time.html
@@ -25,9 +25,7 @@ type=text/css href="../style.css">
   <P>返回 <VAR>self</VAR> 在 <VAR>other</VAR> 秒后的时间。</P>
   <DT><VAR>self</VAR> - <VAR>other</VAR> 
   <DD>
-  <P>若 <VAR>other</VAR> 是时间对象，以 <A href="sc_float.html">Float</A>&nbsp;返回两个时间的差。若 <VAR>other</VAR> 数值，则返回 <SPAN 
-  style="FONT-STYLE: italic">self</SPAN> 在 <SPAN 
-  style="FONT-STYLE: italic">other</SPAN> 秒之前的时间。</P>
+  <P>若 <VAR>other</VAR> 是时间对象，以 <A href="sc_float.html">Float</A>&nbsp;返回两个时间的差。若 <VAR>other</VAR> 数值，则返回 self 在 other 秒之前的时间。</P>
   <DT><VAR>self</VAR> &lt;=&gt; <VAR>other</VAR> 
   <DD>
   <P>比较时间。<VAR>other</VAR> 必须是时间对象或数值。若是数值，则是以时间开始计时已过的秒数来做比较。</P>
