--- a/RPGVXAcecn/rgss/sc_trueclass.html
+++ b/RPGVXAcecn/rgss/sc_trueclass.html
@@ -14,13 +14,11 @@ type=text/css href="../style.css">
 <DL>
   <DT><VAR>self</VAR> &amp; <VAR>other</VAR> 
   <DD>
-  <P>若 <VAR>other</VAR> 为真，返回 true，若 <SPAN 
-  style="FONT-STYLE: italic">other</SPAN> 为伪，返回 false。</P>
+  <P>若 <VAR>other</VAR> 为真，返回 true，若 other 为伪，返回 false。</P>
   <DT><VAR>self</VAR> | <VAR>other</VAR> 
   <DD>
   <P>一定返回 true。</P>
   <DT><VAR>self</VAR> ^ <VAR>other</VAR> 
   <DD>
-  <P>若 <VAR>other</VAR> 为真，返回 false，若 <SPAN 
-  style="FONT-STYLE: italic">other</SPAN> 为伪，返回 true。</P></DD></DL>
+  <P>若 <VAR>other</VAR> 为真，返回 false，若 other 为伪，返回 true。</P></DD></DL>
 <H6></H6></BODY></HTML>
