--- a/RPGVXAcecn/rgss/sm_enumerable.html
+++ b/RPGVXAcecn/rgss/sm_enumerable.html
@@ -37,7 +37,7 @@ p [1,2,3].any? {|v| v &gt; 1}   # =&gt; true
   <P>依次以各个元素执行区块的计算，将所有计算为 true 的项目以数组形式返回。若没有项目计算为 true，则返回空数组。</P>
   <DT>include?(<VAR>val</VAR>) 
   <DD>
-  <P>当列表中任一项目符合 <SPAN style="FONT-STYLE: italic">val</SPAN> ==&nbsp;时，返回 
+  <P>当列表中任一项目符合 val ==&nbsp;时，返回 
   true。</P>
   <DT>inject([<VAR>init</VAR>]) {|<VAR>result</VAR>, <VAR>item</VAR>| ... } 
   <DD>
